--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "epic-vue-boilerplate",
-  "version": "0.1.0",
   "scripts": {
     "build": "webpack -c ./webpack.prod.js",
     "dev": "webpack serve -c ./webpack.dev.js --hot",
@@ -21,6 +20,7 @@
     "@vue/compiler-sfc": "^3.0.4",
     "autoprefixer": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.0.1",
     "eslint": "^7.16.0",
     "eslint-config-airbnb-typescript": "^12.0.0",
