--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "epic-vue-boilerplate",
   "scripts": {
-    "build": "webpack -c ./webpack.prod.js",
+    "build": "webpack --mode production",
+    "dev": "webpack serve --hot --mode development",
     "clean": "rm -rf dist",
-    "dev": "webpack serve -c ./webpack.dev.js --hot",
     "lint": "eslint . --ext .ts,.vue,.js",
     "fix": "prettier && npm run lint --fix"
   },
@@ -31,15 +31,16 @@
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
     "javascript-obfuscator": "^2.9.4",
+    "mini-css-extract-plugin": "^1.3.3",
     "postcss": "^8.2.1",
     "postcss-loader": "^4.1.0",
     "prettier": "^2.2.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "typescript": "^4.1.3",
     "vue-eslint-parser": "^7.3.0",
     "vue-loader": "^16.1.2",
-    "vue-style-loader": "^4.1.2",
     "webpack": "^5.11.0",
     "webpack-cli": "^4.3.0",
     "webpack-dev-server": "^3.11.0",
