--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "scripts": {
     "prebuild": "rm -rf dist",
     "build": "webpack --mode production",
-    "dev": "webpack serve --hot --mode development",
+    "dev": "webpack serve --mode development",
     "lint": "eslint . --ext .ts,.vue,.js",
     "fix": "prettier && npm run lint --fix"
   },
